--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ matrix:
     include:
         - php: 5.6
         - php: 7.0
-          env: DEPENDENCIES='dev' lint=1
+          env: DEPENDENCIES='low'
         - php: 7.1
           env: DEPENDENCIES='low'
     fast_finish: true
@@ -19,7 +19,7 @@ before_install:
     - phpenv config-rm xdebug.ini || echo "xdebug not available"
     - echo "memory_limit=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
     - if [[ $lint = 1 ]]; then wget https://github.com/FriendsOfPHP/PHP-CS-Fixer/releases/download/v2.3.2/php-cs-fixer.phar; fi
-    - if [[ $lint = 1 ]]; then composer global require --dev 'phpstan/phpstan:^0.8'; fi
+    - if [[ $lint = 1 ]]; then composer global require --dev 'phpstan/phpstan:^0.8.0'; fi
     - export PATH="$PATH:$HOME/.composer/vendor/bin"
 
 install:
