--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,12 @@
         "php": "^5.5 || ^7.0",
         "psr/container": "^1.0",
         "symfony/polyfill-mbstring": "^1.5.0",
-        "symfony/validator": "^2.8.9 || ^3.3.6"
+        "symfony/validator": "^2.8.9 || ^3.3.6 || ^4.0"
     },
     "require-dev": {
-        "symfony/config": "^3.3.6",
-        "symfony/console": "^3.3.6",
-        "symfony/phpunit-bridge": "^3.3.6"
+        "symfony/config": "^3.3.6 || ^4.0",
+        "symfony/console": "^3.3.6 || ^4.0",
+        "symfony/phpunit-bridge": "^3.3.6 || ^4.0"
     },
     "autoload": {
         "psr-4": {
